Fixed LV 13 Layout issue

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -523,6 +523,8 @@ label .active {
 	display: inline-block;
 	padding-left: 10px;
 	padding-right: 10px;
+	padding-bottom: 33px;
+	margin-bottom: 0px;
 	box-shadow: 3px 3px 8px 1px #747474;
 }
 
@@ -531,7 +533,7 @@ label .active {
 }
 
 .chinese_character {
-	font-size: 70px;
+	font-size: 60px;
 	color: slategray;
 	font-family: "BiauKai Regular";
 }
